# sandbox

./: README.md
airflow/: README.md  install.sh
airflow/dags/: simple_dag.py
asset_pricing/: beta_estimation.py  pyproject.toml
conformal_prediction/: mapie_classification.py  mapie_regression.py
gists/: README.md  colordiff.sh  sqlite_iqr.sql
opening_the_black_box/: README.md  shap.ipynb  shap_regression.ipynb
outliers/: pyod_example.ipynb
