[project]
name = "asset-pricing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-bcb>=0.1.9",
    "scipy>=1.16.3",
    "statsmodels>=0.14.0",
    "yfinance>=1.0",
]
